--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <script src="index.js"></script>
+      <script defer src="index.js"></script>
     </head>
     <body>
       <h1> CODE YOUR SOLUTION </h1>      
